[package]
name = "imitator-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
csv-async = { version = "1.2.6", features = ["tokio"] }
futures-core = "0.3.28"
md5 = "0.7.0"
rand = "0.8.5"
regex = "1.9.1"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "sqlite"] }
structopt = "0.3.26"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = "0.1.14"
urlencoding = "2.1.3"
warp = "0.3.5"
